# ML3D_project

./: .gitignore  evaluate.py  process_partnet.py  propose_and_visualize.py  run_llm_trellis.py
experiments/: analyze_results.py  common.py  exp1_breadth.py  exp2_n_examples.py  exp3_resample.py  exp4_cfg.py  exp5_thinking.py  exp6_description.py  exp7_masking.py
llm/: __init__.py  box_to_voxel.py  context_builder.py  qwen_proposer.py
outputs/layout_preview/: layout.json
outputs/table_run/: layout.json
partnet_primitives/100013_Remote/: parts_manifest.json
partnet_primitives/100015_KitchenPot/: parts_manifest.json
project6_qwen_pipeline/: .gitignore  DATA_FLOW.md  README.md  pyproject.toml  run_interactive.py
project6_qwen_pipeline/dataset/: README.md
project6_qwen_pipeline/outputs/: README.md
project6_qwen_pipeline/prompts/: README.md
project6_qwen_pipeline/src/project6_qwen_pipeline/: __init__.py  category.py  cli.py  extractor.py  interactive.py  models.py  partnet_raw_adapter.py  prepare_subset.py  preprocess_all.py  prompting.py  qwen_runner.py  raw_geometry.py  raw_layout.py  raw_like_adapter.py  response.py  visualize_proposals.py
project6_qwen_pipeline/src/project6_qwen_pipeline/resources/: partnet_mobility_categories.json
project6_qwen_pipeline/tests/: test_category.py  test_partnet_raw_adapter.py  test_pipeline.py  test_prompting.py  test_qwen_runner.py  test_raw_geometry.py  test_raw_layout.py  test_response.py
project6_qwen_pipeline/tests/fixtures/partnet_raw/7179/: meta.json
qwen/: load.py  load_dataset.py  qwen.py
(+169 files in other folders)
