[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project6-qwen-pipeline"
version = "0.1.0"
description = "PartNet-Mobility layout preprocessing for the Project 6 Qwen pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "trimesh>=4.0",
]

[project.scripts]
project6-layouts = "project6_qwen_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project6_qwen_pipeline = ["resources/*.json"]

